src/test/compile-fail/unsafe-fn-called-from-safe.rs
// -*- rust -*-
// error-pattern: safe function calls function marked unsafe

unsafe fn f() { ret; }

fn main() {
    f();
}
